--- a/Mywebsite.html
+++ b/Mywebsite.html
@@ -1,15 +1,15 @@
 <DOCTYPE! html>
 <html>
 <head>
-<title>Peysbok</title>
+<title>HOT-News</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <border>
-<div class="Mywebsite">
-<h1>Wiki-Pedia</h1>
-<p>The Free Encyclopedia</p>
+<div class="Newsfeed">
+<h1>HOT-News</h1>
+<p>Trending Social News</p>
 </div>
 
 <h2>Trending!</h2>
@@ -44,4 +44,5 @@
 
 
 </body>
+
 </html>
